--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.3.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
