--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "http-status": "^1.4.0",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "mongoose": "^5.7.7",
+    "mongoose-auto-increment": "^5.0.1",
+    "morgan": "^1.9.1",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "moment": "^2.24.0",
-    "mongoose": "^5.7.7",
-    "morgan": "^1.9.1",
     "pm2": "^5.1.0",
     "swagger-jsdoc": "^6.0.8",
     "swagger-ui-express": "^4.1.6",
