--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.7",
     "mongoose-auto-increment": "^5.0.1",
+    "mongoose-paginate-v2": "^1.5.0",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
