--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@joi/date": "^2.1.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
