--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
     "pm2": "^5.1.0",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0",
     "validator": "^13.0.0",
     "winston": "^3.2.1",
     "xss-clean": "^0.1.1"
