feat:create auth tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
     "env": {
+        "node": true,
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "jest": true
     },
     "extends": [
       "airbnb-base", "plugin:jest/recommended", "plugin:security/recommended", "plugin:prettier/recommended"
