--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   },
   "dependencies": {
     "@joi/date": "^2.1.0",
+    "@types/jest": "^27.4.0",
     "bcryptjs": "^2.4.3",
+    "br-validator": "^4.1.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "cpf-cnpj-validator": "^1.0.3",
     "cross-env": "^7.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
