ref:dotenv exxample

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-# Número da porta
 PORT=3000
-
-# URL do Mongo DB
-MONGODB_URL=mongodb://127.0.0.1:27017/Market-api
+JWT_SECRET=suasenhasecreta
+DB_HOST=mongodb://localhost:27017/<NOME_DO_BANCO>
+JWT_ACCESS_EXPIRATION_MINUTES=
